--- a/Libreria/Libreria.csproj
+++ b/Libreria/Libreria.csproj
@@ -120,6 +120,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>BibliotecaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>BibliotecaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>BibliotecaModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="UBICACION.cs">
       <DependentUpon>BibliotecaModel.tt</DependentUpon>
     </Compile>
@@ -193,13 +202,13 @@
     <Content Include="bdd.sql" />
     <Content Include="BibliotecaModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>BibliotecaModel.Context.cs</LastGenOutput>
       <DependentUpon>BibliotecaModel.edmx</DependentUpon>
+      <LastGenOutput>BibliotecaModel.Context.cs</LastGenOutput>
     </Content>
     <Content Include="BibliotecaModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>BibliotecaModel.cs</LastGenOutput>
       <DependentUpon>BibliotecaModel.edmx</DependentUpon>
+      <LastGenOutput>BibliotecaModel.cs</LastGenOutput>
     </Content>
     <Content Include="libros.jpg" />
     <Content Include="libros2.jpg" />
